Bug 1470961 - Remove unnecessary use of SQLITE_IGNORE. r=asuth

MozReview-Commit-ID: GhZzTzLULWp